--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@
         <div class="mask">
 
             <div class="container flex-center text-center">
-                    <div id="particle"></div>
+                <div id="particle"></div>
                 <div class="row mt-5">
                     <div class="col-md-12 wow fadeIn mb-3">
-                            <div class="circle-avatar border-danger border mb-5 js-tilt"
+                        <div class="circle-avatar border-danger border mb-5 js-tilt"
                             style="background-image:url(https://pbs.twimg.com/media/D8o-pyNXoAABEL9?format=jpg&name=4096x4096)">
                         </div>
                         <h1 class="display-3 mb-2 wow fadeInDown text-light effra" data-wow-delay="0.3s"><span
                                 class="text-c-dark font-weight-bold effra">/</span>JAMES <span
                                 class="text-c-dark font-weight-bold effra">LEWANDOWSKI</span></h1>
                         <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra"
-                            data-wow-delay="0.4s"><span class="red-text font-weight-bold effra">/</span> Web developer <span class="text-c-dark font-weight-bold effra">&</span>
+                            data-wow-delay="0.4s"><span class="red-text font-weight-bold effra">/</span> Web developer
+                            <span class="text-c-dark font-weight-bold effra">&</span>
                             Interactive Designer</h5>
                         <!-- <a class="btn btn-light-blue btn-lg wow fadeIn" data-wow-delay="0.4s">portfolio</a> <a class="btn btn-indigo btn-lg wow fadeIn"
                       data-wow-delay="0.4s">About me</a> -->
@@ -94,9 +95,12 @@
                         src="https://pro2-bar-s3-cdn-cf4.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/5475fcef-e2f6-427e-991f-99b21ae54c50_car_202x158.png?h=b00ed58ba4e439effcca9c3934dfc7b3&url=aHR0cHM6Ly9taXItczMtY2RuLWNmLmJlaGFuY2UubmV0L3Byb2plY3RzL29yaWdpbmFsLzc1NjQyYjc5OTU5MDk3LlkzSnZjQ3cwTXpReExETXpPVFlzTXpjMkxEQS5wbmc="
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><span class="text-c-light font-weight-bold effra">/</span> Photography</h4>
-                        <p class="card-text text-light">Photoshoots and Projects<button type="button" class="btn btn-dark ml-5 float-right" data-toggle="modal" data-target=".photographyModal">See More</button></p>
-                        
+                        <h4 class="card-title display-5 text-uppercase effra"><span
+                                class="text-c-light font-weight-bold effra">/</span> Photography</h4>
+                        <p class="card-text text-light">Photoshoots and Projects<button type="button"
+                                class="btn btn-dark ml-5 float-right" data-toggle="modal"
+                                data-target=".photographyModal">See More</button></p>
+
                     </div>
                 </div>
             </div>
@@ -107,8 +111,11 @@
                         src="https://pro2-bar-s3-cdn-cf2.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/dcf77b22-1a36-4183-ae91-6e8eb1d280ad_car_202x158.png?h=eae528b8c070f8c89e5549b125345d9c&url=aHR0cHM6Ly9taXItczMtY2RuLWNmLmJlaGFuY2UubmV0L3Byb2plY3RzL29yaWdpbmFsLzVkOGEyYjc5Mzc1NzY3LlkzSnZjQ3d5TlRBd0xERTVOVFVzTUN3dy5wbmc="
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><span class="text-c-light font-weight-bold effra">/</span> User Interface</h4>
-                        <p class="card-text text-light">User Interface and User Exprience Designs<button type="button" class="btn btn-dark ml-5 float-right" data-toggle="modal" data-target=".bd-example-modal-lg">See More</button></p>
+                        <h4 class="card-title display-5 text-uppercase effra"><span
+                                class="text-c-light font-weight-bold effra">/</span> User Interface</h4>
+                        <p class="card-text text-light">User Interface and User Exprience Designs<button type="button"
+                                class="btn btn-dark ml-5 float-right" data-toggle="modal"
+                                data-target=".bd-example-modal-lg">See More</button></p>
                     </div>
                 </div>
             </div>
@@ -119,8 +126,11 @@
                         src="https://pro2-bar-s3-cdn-cf2.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/3e4390f7-f0b6-4426-a11b-29229ee14ef0_car_202x158.png?h=fbb098de2aab75e6b68833ed012110fe"
                         alt="">
                     <div class="card-body">
-                        <h4 class="card-title display-5 text-uppercase effra"><span class="text-c-light font-weight-bold effra">/</span> Web Development</h4>
-                        <p class="card-text text-light">Web Projects and Creations<button type="button" class="btn btn-dark ml-5 float-right" data-toggle="modal" data-target=".bd-example-modal-lg">See More</button></p>
+                        <h4 class="card-title display-5 text-uppercase effra"><span
+                                class="text-c-light font-weight-bold effra">/</span> Web Development</h4>
+                        <p class="card-text text-light">Web Projects and Creations<button type="button"
+                                class="btn btn-dark ml-5 float-right" data-toggle="modal"
+                                data-target=".bd-example-modal-lg">See More</button></p>
                     </div>
                 </div>
             </div>
@@ -131,8 +141,11 @@
                         src="https://pro2-bar-s3-cdn-cf6.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/a840fd47-6aba-4ac9-9353-31981355b862_car_202x158.png?h=a8037412e26bf5cfba84b2a1a88d6344"
                         alt="">
                     <div class="card-body tild-3d">
-                        <h4 class="card-title display-5 text-uppercase effra"><span class="text-c-light font-weight-bold effra">/</span> Graphic Design</h4>
-                        <p class="card-text text-light">Graphic Design and Illustrative Projects<button type="button" class="btn btn-dark ml-5 float-right" data-toggle="modal" data-target=".bd-example-modal-lg">See More</button></p>
+                        <h4 class="card-title display-5 text-uppercase effra"><span
+                                class="text-c-light font-weight-bold effra">/</span> Graphic Design</h4>
+                        <p class="card-text text-light">Graphic Design and Illustrative Projects<button type="button"
+                                class="btn btn-dark ml-5 float-right" data-toggle="modal"
+                                data-target=".bd-example-modal-lg">See More</button></p>
                     </div>
                 </div>
             </div>
@@ -141,30 +154,32 @@
 
             <div class="modal fade " tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
-                  <div class="modal-content">
-                    ...
-                  </div>
+                    <div class="modal-content">
+                        ...
+                    </div>
                 </div>
-              </div>
+            </div>
 
-              <div class="modal fade photographyModal" id="photographyModal" tabindex="-1" role="dialog" aria-labelledby="photographyModal" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                      <div class="modal-content bg-dark text-light">
+            <div class="modal fade photographyModal" id="photographyModal" tabindex="-1" role="dialog"
+                aria-labelledby="photographyModal" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content bg-dark text-light">
                         <div class="modal-header">
-                          <h5 class="modal-title  text-uppercase font-weight-bold" id="photographyModalTitle"><span class="red-text font-weight-bold effra">/</span> Photography</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
+                            <h5 class="modal-title  text-uppercase font-weight-bold" id="photographyModalTitle"><span
+                                    class="red-text font-weight-bold effra">/</span> Photography</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
                         <div class="modal-body">
-                          ...
+                            ...
                         </div>
                         <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div>
-                      </div>
                     </div>
-                  </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -185,11 +200,42 @@
         </div>
 
         <div class="jumbotron bg-c-dark mt-5">
-            <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span class="text-c-light font-weight-bold effra">/</span> Who Am I?</h1>
-            <p class="lead text-c-light">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
+                    class="text-c-light font-weight-bold effra">/</span> Who Am I?</h1>
+            <p class="lead text-c-light">A Maryville University Junior studying Interactive Design with specilizations
+                in UI / UX Designer and Front-End Web Development</p>
             <hr class="my-4 bg-light">
-            <p class="text-c-light">It uses utility classes for typography and spacing to space content out within the larger container.</p>
-          </div>
+            <p class="text-c-light">Since 2003 I have been exploring web development through various mediums and
+                learning from these mediums.
+                Beginning as a 5th grader I would read, and learn from other websites source codes by copying snippets
+                of HTML and CSS and implementing them
+                into my own test projects to see how they reacted with each other. It is curiosity that has taught me
+                what I know from then, and since becoming
+                a student at Maryville University I have branched out into newer languages that are more prominent
+                today. To fulfill my learning curiosity
+                I branched past learning Jquery at University into learning Javascript, React.js, small bits of Node.js
+                as well as learning the component
+                based system Bootstrap 4.</p>
+
+            <p class="text-c-light">While learning, I had always had an issue with websites which were difficult to
+                follow or use and often would quit using them and
+                imagine ways in which the site would be more usable. That was before taking a class in UX / UI Design
+                where I learned how important
+                website usability really is. UX Design struck an important nerve for me and found its way into all my
+                designs soon after. You can see examples of my work in which
+                I have implement such systems in my UI / UX works where I have designed with UX in mind.</p>
+
+            <p class="text-c-light">Aside from skills, I have worked customer service at a variation of retail
+                locations, the last four years of which have been at Jockey International where I have been praised for
+                exceptional people skills, my non-dramatic view and attitude, and my ability to always keep a smile on
+                my face. I have always prided myself in my ability to keep a positive attitude regardless of a situation
+                and to keep myself calm, and composed even with an otherwise stressful deadline.</p>
+            <hr class="my-4 bg-light">
+            <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
+                    class="text-c-light font-weight-bold effra">/</span> Contact Me</h1>
+            <p class="lead text-c-light">A Maryville University Junior studying Interactive Design with specilizations
+                in UI / UX Designer and Front-End Web Development</p>
+        </div>
     </div>
 
     <!-- Jquery Script -->
@@ -208,7 +254,7 @@
     <script src="js/jquery.particleground.min.js"></script>
     <!-- ScrollMagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
     <!-- Custom Javascript -->
     <script src="js/index.js"></script>
 </body>
