--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="view parallax" id="header">
         <div class="mask">
 
-            <div class="container flex-center text-center">
+            <div class="container flex-center ">
                 <div id="particle"></div>
                 <div class="row mt-5">
                     <div class="col-md-12 wow fadeIn mb-3">
@@ -65,8 +65,7 @@
                                 class="text-c-dark font-weight-bold effra">/</span>JAMES <span
                                 class="text-c-dark font-weight-bold effra">LEWANDOWSKI</span></h1>
                         <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra"
-                            data-wow-delay="0.4s"><span class="red-text font-weight-bold effra">/</span> Web developer
-                            <span class="text-c-dark font-weight-bold effra">&</span>
+                            data-wow-delay="0.4s">Web developer <span class="text-c-dark font-weight-bold effra">&</span>
                             Interactive Designer</h5>
                         <!-- <a class="btn btn-light-blue btn-lg wow fadeIn" data-wow-delay="0.4s">portfolio</a> <a class="btn btn-indigo btn-lg wow fadeIn"
                       data-wow-delay="0.4s">About me</a> -->
@@ -83,7 +82,7 @@
         <div class="row justify-content-center" id="jWorks">
             <div class="col-8 col-lg-10">
                 <h1 class="display-5 font-weight-bold text-uppercase text-light effra"><span
-                        class="red-text font-weight-bold effra">/</span> My Works</h1>
+                        class="text-c-dark font-weight-bold effra">/</span> My Works</h1>
             </div>
         </div>
         <!-- My Works : Cards -->
@@ -96,10 +95,9 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><span
-                                class="text-c-light font-weight-bold effra">/</span> Photography</h4>
-                        <p class="card-text text-light">Photoshoots and Projects<button type="button"
-                                class="btn btn-dark ml-5 float-right" data-toggle="modal"
-                                data-target=".photographyModal">See More</button></p>
+                                class="text-dark font-weight-bold effra">/</span> Photography</h4>
+                        <p class="card-text text-light">Photoshoots and Projects<a href="works-photography.html" type="button"
+                                class="btn btn-dark ml-5 float-right">See More</a></p>
 
                     </div>
                 </div>
@@ -112,7 +110,7 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><span
-                                class="text-c-light font-weight-bold effra">/</span> User Interface</h4>
+                                class="text-dark font-weight-bold effra">/</span> User Interface</h4>
                         <p class="card-text text-light">User Interface and User Exprience Designs<button type="button"
                                 class="btn btn-dark ml-5 float-right" data-toggle="modal"
                                 data-target=".bd-example-modal-lg">See More</button></p>
@@ -127,7 +125,7 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><span
-                                class="text-c-light font-weight-bold effra">/</span> Web Development</h4>
+                                class="text-dark font-weight-bold effra">/</span> Web Development</h4>
                         <p class="card-text text-light">Web Projects and Creations<button type="button"
                                 class="btn btn-dark ml-5 float-right" data-toggle="modal"
                                 data-target=".bd-example-modal-lg">See More</button></p>
@@ -142,41 +140,10 @@
                         alt="">
                     <div class="card-body tild-3d">
                         <h4 class="card-title display-5 text-uppercase effra"><span
-                                class="text-c-light font-weight-bold effra">/</span> Graphic Design</h4>
+                                class="text-dark font-weight-bold effra">/</span> Graphic Design</h4>
                         <p class="card-text text-light">Graphic Design and Illustrative Projects<button type="button"
                                 class="btn btn-dark ml-5 float-right" data-toggle="modal"
                                 data-target=".bd-example-modal-lg">See More</button></p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- My Works: Card Modals -->
-
-            <div class="modal fade " tabindex="-1" role="dialog" aria-labelledby="" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        ...
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal fade photographyModal" id="photographyModal" tabindex="-1" role="dialog"
-                aria-labelledby="photographyModal" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                    <div class="modal-content bg-dark text-light">
-                        <div class="modal-header">
-                            <h5 class="modal-title  text-uppercase font-weight-bold" id="photographyModalTitle"><span
-                                    class="red-text font-weight-bold effra">/</span> Photography</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            ...
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -195,13 +162,13 @@
         <div class="row justify-content-center mt-5">
             <div class="col-8 col-lg-10">
                 <h1 class="display-5 font-weight-bold text-uppercase text-light effra"><span
-                        class="red-text font-weight-bold effra">/</span> About Me</h1>
+                        class="text-c-dark font-weight-bold effra">/</span> About Me</h1>
             </div>
         </div>
 
         <div class="jumbotron bg-c-dark mt-5">
             <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
-                    class="text-c-light font-weight-bold effra">/</span> Who Am I?</h1>
+                    class="text-dark font-weight-bold effra">/</span> Who Am I?</h1>
             <p class="lead text-c-light">A Maryville University Junior studying Interactive Design with specilizations
                 in UI / UX Designer and Front-End Web Development</p>
             <hr class="my-4 bg-light">
@@ -231,13 +198,34 @@
                 my face. I have always prided myself in my ability to keep a positive attitude regardless of a situation
                 and to keep myself calm, and composed even with an otherwise stressful deadline.</p>
             <hr class="my-4 bg-light">
-            <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
-                    class="text-c-light font-weight-bold effra">/</span> Contact Me</h1>
-            <p class="lead text-c-light">A Maryville University Junior studying Interactive Design with specilizations
-                in UI / UX Designer and Front-End Web Development</p>
+            <div class="row">
+                <h1 class="display-4 effra text-light font-weight-bold text-uppercase"><span
+                        class="text-dark font-weight-bold effra">/</span> Contact Me</h1>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4">
+                        <div class="card border-0 shadow-lg bg-dark text-light js-tilt js-tilt-glare" data-tilt>
+                                <div class="card-body">
+                                    <h4 class="card-title display-5 text-uppercase effra">Email</h4>
+                                    <p class="card-text text-light"><script type="text/javascript">document.write("<a class='text-c-light text-uppercase' href='mailto:&#106;&#97;&#109;&#101;&#115;&#64;&#108;&#101;&#119;&#97;&#110;&#100;&#111;&#119;&#115;&#107;&#105;&#46;&#100;&#101;&#115;&#105;&#103;&#110;'> &#106;&#97;&#109;&#101;&#115;&#64;&#108;&#101;&#119;&#97;&#110;&#100;&#111;&#119;&#115;&#107;&#105;&#46;&#100;&#101;&#115;&#105;&#103;&#110;</a>")</script></p>
+            
+                                </div>
+                        </div>
+                </div>
+
+                <div class="col-md-4">
+                        <div class="card border-0 shadow-lg bg-dark text-light js-tilt js-tilt-glare" data-tilt>
+                                <div class="card-body">
+                                    <h4 class="card-title display-5 text-uppercase effra">Phone Number</h4>
+                                    <p class="card-text text-light">&#51;&#49;&#52;&#45;&#50;&#55;&#55;&#45;&#53;&#48;&#52;&#57;</p>
+            
+                                </div>
+                        </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
     <!-- Jquery Script -->
     <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
     <!-- Bootstrap tooltips -->
