nav update + works page

--- a/works-photography.html
+++ b/works-photography.html
@@ -61,8 +61,53 @@
                         <h1 class="display-3 mb-2 wow fadeInDown text-light effra" data-wow-delay="0.3s"><span
                                 class="text-c-dark font-weight-bold effra">/</span>JAMES <span
                                 class="text-c-dark font-weight-bold effra">LEWANDOWSKI</span></h1>
-                        <a class="btn btn-dark btn-lg wow fadeIn" data-wow-delay="0.4s" href="index.html">Go Back</a>
+                        <!-- <a class="btn btn-dark btn-lg wow fadeIn" data-wow-delay="0.4s" href="index.html">Go Back</a> -->
+                        
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-fluid mx-0 p-0">
+        <div class="row flex-center mx-0 p-0">
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="row flex-center mx-0 p-0">
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-8 view overlay m-0 p-0">
+                <img src="holder.js/500x500?theme=lava&auto=yes" class="img-fluid img">
+                <div class="mask flex-center rgba-red-strong">
+                    <p class="white-text effra font-weight-bold text-uppercase">Strong overlay</p>
                 </div>
             </div>
         </div>
