Begin WORKS pages and new navigation

--- a/works-graphic.html
+++ b/works-graphic.html
@@ -46,14 +46,14 @@
                         aria-expanded="false">Works</a>
 
                     <div class="dropdown-menu bg-c-dark">
-                        <a class="dropdown-item text-light effra active" href="#header">Photography<span
-                                class="sr-only">(current)</span></a>
+                        <a class="dropdown-item text-light effra active" href="works-photography.html">Photography<span
+                                class="sr-only">Photography Projects</span></a>
                         <a class="dropdown-item text-light effra" href="works-ui.html">UI | UX Design<span
                                 class="sr-only">User Interface and User Experience Design Projects</span></a>
                         <a class="dropdown-item text-light effra" href="works-web.html">Web Development<span
                                 class="sr-only">Web Design and Development Projects</span></a>
-                        <a class="dropdown-item text-light effra" href="works-graphic.html">Graphic Design<span
-                                class="sr-only">Graphic Design Projects</span></a>
+                        <a class="dropdown-item text-light effra" href="#header">Graphic Design<span
+                                class="sr-only">(current)</span></a>
                     </div>
                 </li>
 
@@ -86,7 +86,7 @@
                                 class="text-c-dark font-weight-bold effra">LEWANDOWSKI</span></h1>
 
                         <h5 class="text-uppercase mb-3 mt-1 font-weight-bold wow fadeIn text-light effra"
-                            data-wow-delay="0.4s">PHOTOGRAPHY</h5>
+                            data-wow-delay="0.4s">GRAPHIC DESIGN</h5>
                     </div>
 
                 </div>
