Continued updates to gallery pages

--- a/index.html
+++ b/index.html
@@ -115,8 +115,7 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fas fa-camera fa-md text-dark"></i> <span
-                                class="text-dark font-weight-bold effra"> /</span> Photography</h4>
+                                class="fas fa-camera fa-md text-dark"></i> Photography</h4>
                         <p class="card-text text-light">Photoshoots and Projects
                             <a type="button" href="works-photography.html" class="btn btn-dark ml-5 float-right">See
                                 More</a></p>
@@ -132,8 +131,7 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fab fa-sketch fa-md text-dark"></i> <span
-                                class="text-dark font-weight-bold effra">/</span> User Interface</h4>
+                                class="fab fa-sketch fa-md text-dark"></i> User Interface</h4>
                         <p class="card-text text-light">User Interface and User Exprience Designs
                             <a type="button" href="works-ui.html" class="btn btn-dark ml-5 float-right">See More</a></p>
                     </div>
@@ -147,8 +145,7 @@
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fas fa-file-code fa-md text-dark"></i> <span
-                                class="text-dark font-weight-bold effra">/</span> Web Development</h4>
+                                class="fas fa-file-code fa-md text-dark"></i> Web Development</h4>
                         <p class="card-text text-light">Web Projects and Creations<a type="button" href="works-web.html"
                                 class="btn btn-dark ml-5 float-right">See More</a>
                         </p>
@@ -163,8 +160,7 @@
                         alt="">
                     <div class="card-body tild-3d">
                         <h4 class="card-title display-5 text-uppercase effra"><i
-                                class="fab fa-adobe fa-md text-dark"></i> <span
-                                class="text-dark font-weight-bold effra">/</span> Graphic Design</h4>
+                                class="fab fa-adobe fa-md text-dark"></i> Graphic Design</h4>
                         <p class="card-text text-light">Graphic Design and Illustrative Projects<a type="button"
                                 href="works-graphic.html" class="btn btn-dark ml-5 float-right">See More</a>
                         </p>
