update to webworks + move images to cdn

--- a/src/pages/works-ui.html
+++ b/src/pages/works-ui.html
@@ -99,7 +99,7 @@
       <div class="grid-sizer"></div>
       <!-- 2019 -->
       <div class="grid-item view overlay">
-        <img src="../img/thumbs/ui/dirtycode.png" alt=".dirtyCode Project" />
+        <img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563905650/JamesBootHomepage/works/thumbs/ui/dirtyCode.png" alt=".dirtyCode Project" />
         <button type="button" class="mask flex-center rgba-red-strong border-0" data-toggle="modal"
           data-target="#dirtyCode">
           <p class="white-text effra font-weight-bold text-uppercase">.dirtyCode </p>
@@ -110,7 +110,7 @@
 
 
       <div class="grid-item view overlay">
-        <img src="../img/thumbs/ui/nursing.png" alt="Maryville Nursing App" />
+        <img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563905650/JamesBootHomepage/works/thumbs/ui/nursingApp.png" alt="Maryville Nursing App" />
         <button type="button" class="mask flex-center rgba-red-strong border-0" data-toggle="modal"
           data-target="#nursingApp">
           <p class="white-text effra font-weight-bold text-uppercase">Nursing App </p>
@@ -118,6 +118,8 @@
         </button>
       </div>
     </div>
+  </div>
+
     <div id="imageGallery">
       <!-- DIRTYCODE MODAL -->
       <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="dirtyCode" id="dirtyCode" aria-hidden="true">
@@ -134,7 +136,7 @@
             <div class="modal-body" id="dirtyCodeBody">
               <div class="row mx-0 p-0 mb-1">
                 <div class="col-12 mx-0 p-0">
-                  <a href="../img/workscontent/ui/dirtyCode.png"><img src="../img/workscontent/ui/dirtyCode.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911709/JamesBootHomepage/works/content/ui/dirtyCode_jhgx5u.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911709/JamesBootHomepage/works/content/ui/dirtyCode_jhgx5u.png"
                       class="img-fluid"></a>
                 </div>
               </div>
@@ -191,17 +193,17 @@
             <div class="modal-body" id="nursingAppBody">
               <div class="row mx-0 p-0 mb-1">
                 <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
-                  <a href="../img/workscontent/ui/nurseapp/1.png"><img src="../img/workscontent/ui/nurseapp/1.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911519/JamesBootHomepage/works/content/ui/1nurse_mppkbl.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911519/JamesBootHomepage/works/content/ui/1nurse_mppkbl.png"
                       class="img-fluid"></a>
-                  <a href="../img/workscontent/ui/nurseapp/2.png"><img src="../img/workscontent/ui/nurseapp/2.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911522/JamesBootHomepage/works/content/ui/2nurse_mblamw.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911522/JamesBootHomepage/works/content/ui/2nurse_mblamw.png"
                       class="img-fluid"></a>
-                  <a href="../img/workscontent/ui/nurseapp/3.png"><img src="../img/workscontent/ui/nurseapp/3.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911526/JamesBootHomepage/works/content/ui/3nurse_ce86ct.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911526/JamesBootHomepage/works/content/ui/3nurse_ce86ct.png"
                       class="img-fluid"></a>
-                  <a href="../img/workscontent/ui/nurseapp/4.png"><img src="../img/workscontent/ui/nurseapp/4.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911524/JamesBootHomepage/works/content/ui/4nurse_m4fm3f.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911524/JamesBootHomepage/works/content/ui/4nurse_m4fm3f.png"
                       class="img-fluid"></a>
-                  <a href="../img/workscontent/ui/nurseapp/5.png"><img src="../img/workscontent/ui/nurseapp/5.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911525/JamesBootHomepage/works/content/ui/5nurse_dk7rir.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911525/JamesBootHomepage/works/content/ui/5nurse_dk7rir.png"
                       class="img-fluid"></a>
-                  <a href="../img/workscontent/ui/nurseapp/6.png"><img src="../img/workscontent/ui/nurseapp/6.png"
+                  <a href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911524/JamesBootHomepage/works/content/ui/6nurse_zrc0ds.png"><img src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563911524/JamesBootHomepage/works/content/ui/6nurse_zrc0ds.png"
                       class="img-fluid"></a>
                 </div>
               </div>
