--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="row mt-5">
                     <div class="col-md-12 wow fadeIn mb-3">
                         <div class="circle-avatar border-danger border mb-5 js-tilt"
-                            style="background-image:url(https://pbs.twimg.com/media/D8o-pyNXoAABEL9?format=jpg&name=4096x4096)">
+                            style="background-image:url('https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903184/JamesBootHomepage/Homepage%20Profile%20Avatar.jpg')">
                         </div>
                         <h1 class="display-3 mb-2 animated wow fadeInUp text-light effra d-md-block d-none"
                             data-wow-delay="0.3s"><span class="text-c-dark font-weight-bold effra">/</span>JAMES <span
@@ -111,7 +111,7 @@
             <div class="col-md-12 col-lg-3 col-xl-2 mb-2">
                 <div class="card border-0 shadow-lg bg-c-dark text-light js-tilt js-tilt-glare wow fadeInUp" data-tilt>
                     <img class="card-img-top"
-                        src="https://pro2-bar-s3-cdn-cf4.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/5475fcef-e2f6-427e-991f-99b21ae54c50_car_202x158.png?h=b00ed58ba4e439effcca9c3934dfc7b3&url=aHR0cHM6Ly9taXItczMtY2RuLWNmLmJlaGFuY2UubmV0L3Byb2plY3RzL29yaWdpbmFsLzc1NjQyYjc5OTU5MDk3LlkzSnZjQ3cwTXpReExETXpPVFlzTXpjMkxEQS5wbmc="
+                        src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903536/JamesBootHomepage/homepageCards/photographyCard.jpg"
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
@@ -127,7 +127,7 @@
             <div class="col-md-12 col-lg-3 col-xl-2 mb-2">
                 <div class="card border-0 shadow-lg bg-c-dark text-light js-tilt js-tilt-glare wow fadeInUp" data-tilt>
                     <img class="card-img-top"
-                        src="https://pro2-bar-s3-cdn-cf2.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/dcf77b22-1a36-4183-ae91-6e8eb1d280ad_car_202x158.png?h=eae528b8c070f8c89e5549b125345d9c&url=aHR0cHM6Ly9taXItczMtY2RuLWNmLmJlaGFuY2UubmV0L3Byb2plY3RzL29yaWdpbmFsLzVkOGEyYjc5Mzc1NzY3LlkzSnZjQ3d5TlRBd0xERTVOVFVzTUN3dy5wbmc="
+                        src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903683/JamesBootHomepage/homepageCards/uiCard.png"
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
@@ -141,7 +141,7 @@
             <div class="col-md-12 col-lg-3 col-xl-2 mb-2">
                 <div class="card border-0 shadow-lg bg-c-dark text-light js-tilt js-tilt-glare wow fadeInUp" data-tilt>
                     <img class="card-img-top"
-                        src="https://pro2-bar-s3-cdn-cf2.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/3e4390f7-f0b6-4426-a11b-29229ee14ef0_car_202x158.png?h=fbb098de2aab75e6b68833ed012110fe"
+                        src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903684/JamesBootHomepage/homepageCards/webCard.png"
                         alt="">
                     <div class="card-body">
                         <h4 class="card-title display-5 text-uppercase effra"><i
@@ -156,7 +156,7 @@
             <div class="col-md-12 col-lg-3 col-xl-2 mb-2">
                 <div class="card border-0 shadow-lg bg-c-dark text-light js-tilt js-tilt-glare wow fadeInUp" data-tilt>
                     <img class="card-img-top"
-                        src="https://pro2-bar-s3-cdn-cf6.myportfolio.com/9b8e06484487e574dd534783e49e6c2f/a840fd47-6aba-4ac9-9353-31981355b862_car_202x158.png?h=a8037412e26bf5cfba84b2a1a88d6344"
+                        src="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563903685/JamesBootHomepage/homepageCards/designCard.png"
                         alt="">
                     <div class="card-body tild-3d">
                         <h4 class="card-title display-5 text-uppercase effra"><i
