attempt to fix bluimg

--- a/src/pages/works-web.html
+++ b/src/pages/works-web.html
@@ -3,20 +3,22 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- FontAwesome Styles -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <!-- Bootstrap Styles -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
-  <!-- MDB Resource -->
-  <link href="../css/mdb.min.css" rel="stylesheet">
-  <!-- Adobe Fonts -->
-  <link rel="stylesheet" href="https://use.typekit.net/dhn6pkx.css">
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="../css/index.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- FontAwesome Styles -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+    <!-- Bootstrap Styles -->
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <!-- MDB Resource -->
+    <link href="../css/mdb.min.css" rel="stylesheet">
+    <!-- Adobe Fonts -->
+    <link rel="stylesheet" href="https://use.typekit.net/dhn6pkx.css">
+    <!-- BlueGallery CSS -->
+    <link rel="stylesheet" href="../css/blueimp-gallery.min.css">
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="../css/index.css">
 
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>James Lewandowski | Portfolio</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>James Lewandowski | Portfolio</title>
 </head>
 
 <body>
@@ -186,18 +188,70 @@
             </div>
             <div class="row mx-0 p-0 mb-1">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
-                <a href="../img/workscontent/ui/nurseapp/1.png"><img src="../img/workscontent/ui/nurseapp/1.png"
-                    class="img-fluid"></a>
-                <a href="../img/workscontent/ui/nurseapp/2.png"><img src="../img/workscontent/ui/nurseapp/2.png"
-                    class="img-fluid"></a>
-                <a href="../img/workscontent/ui/nurseapp/3.png"><img src="../img/workscontent/ui/nurseapp/3.png"
-                    class="img-fluid"></a>
-                <a href="../img/workscontent/ui/nurseapp/4.png"><img src="../img/workscontent/ui/nurseapp/4.png"
-                    class="img-fluid"></a>
-                <a href="../img/workscontent/ui/nurseapp/5.png"><img src="../img/workscontent/ui/nurseapp/5.png"
-                    class="img-fluid"></a>
-                <a href="../img/workscontent/ui/nurseapp/6.png"><img src="../img/workscontent/ui/nurseapp/6.png"
-                    class="img-fluid"></a>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- KIOSK MODAL notcomplete-->
+    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="kiosk" id="kiosk" aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content bg-c-dark">
+          <div class="modal-header">
+            <h1 class="modal-title effra text-uppercase text-white font-weight-bold">Construction Kiosk
+            </h1>
+            <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div class="modal-body" id="kioskBody">
+            <div class="row mx-0 p-0 mb-1 ">
+              <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
+                <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/interactiveapps-kiosk/index.html"
+                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
+                  mobile devices</p>
+              </div>
+            </div>
+            <div class="row mx-0 p-0 mb-1">
+              <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- BEAUTY DESIGN MODAL notcomplete-->
+    <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="beautydesign" id="beautydesign"
+      aria-hidden="true">
+      <div class="modal-dialog modal-xl">
+        <div class="modal-content bg-c-dark">
+          <div class="modal-header">
+            <h1 class="modal-title effra text-uppercase text-white font-weight-bold">Design Showcase
+            </h1>
+            <button type="button" class="close text-light" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+
+          <div class="modal-body" id="beautydesignBody">
+            <div class="row mx-0 p-0 mb-1 ">
+              <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
+                <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/webdesign2-beauty/index.html"
+                  target="_blank"><span class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
+                <p class="font-italic text-light">This site is <span class="font-weight-bold">not optimized</span> for
+                  mobile devices</p>
+              </div>
+            </div>
+            <div class="row mx-0 p-0 mb-1">
+              <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
+
               </div>
             </div>
           </div>
@@ -389,16 +443,16 @@
     </div>
 
   </div>
-  <!-- Gallery SETUP -->
-  <div id="blueimp-gallery" class="blueimp-gallery">
-    <div class="slides"></div>
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-  </div>
+        <!-- Gallery SETUP -->
+        <div id="blueimp-gallery" class="blueimp-gallery">
+          <div class="slides"></div>
+          <h3 class="title"></h3>
+          <a class="prev">‹</a>
+          <a class="next">›</a>
+          <a class="close">×</a>
+          <a class="play-pause"></a>
+          <ol class="indicator"></ol>
+      </div>
 
   <!-- Jquery Script -->
   <script type="text/javascript" src="../js/jquery-3.4.1.min.js"></script>
