Blu-Img Gallery Fix
- Removed Independent page functions from main index.js file and incorporated each into its own page file (web.js, photography.js, ui.js) in order to fix issues with blu-img gallery.

--- a/src/pages/works-web.html
+++ b/src/pages/works-web.html
@@ -447,9 +447,9 @@
         <div id="blueimp-gallery" class="blueimp-gallery">
           <div class="slides"></div>
           <h3 class="title"></h3>
-          <a class="prev">‹</a>
-          <a class="next">›</a>
-          <a class="close">×</a>
+          <a class="prev text-white">‹</a>
+          <a class="next text-white">›</a>
+          <a class="close text-white">×</a>
           <a class="play-pause"></a>
           <ol class="indicator"></ol>
       </div>
@@ -478,6 +478,8 @@
   <script src="../js/blueimp-gallery.min.js"></script>
   <!-- Custom Javascript -->
   <script src="../js/index.js"></script>
+  <!-- Additions -->
+  <script src="../js/web.js"></script>
 
 </body>
 
