Finish Graphics Page + Fix Web Links

--- a/src/pages/works-web.html
+++ b/src/pages/works-web.html
@@ -176,7 +176,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="dragBody">
+          <div class="modal-body" >
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
@@ -186,7 +186,7 @@
                   mobile devices</p>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1">
+            <div class="row mx-0 p-0 mb-1" id="dragBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
 
               </div>
@@ -208,7 +208,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="kioskBody">
+          <div class="modal-body" >
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/interactiveapps-kiosk/index.html"
@@ -217,7 +217,7 @@
                   mobile devices</p>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1">
+            <div class="row mx-0 p-0 mb-1" id="kioskBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
 
               </div>
@@ -240,7 +240,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="beautydesignBody">
+          <div class="modal-body">
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left" href="worksweb/webdesign2-beauty/index.html"
@@ -249,7 +249,7 @@
                   mobile devices</p>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1">
+            <div class="row mx-0 p-0 mb-1" id="beautydesignBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
 
               </div>
@@ -271,7 +271,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="webfontBody">
+          <div class="modal-body" >
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
@@ -281,7 +281,7 @@
                   mobile devices</p>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1">
+            <div class="row mx-0 p-0 mb-1" id="webfontBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
                 <a
                   href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563912186/JamesBootHomepage/works/content/web/1webfont_lvhakj.png"><img
@@ -323,7 +323,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="superherochildrenBody">
+          <div class="modal-body">
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
@@ -331,7 +331,7 @@
                     class="text-c-dark font-weight-bold effra">/</span> Live Website</a>
               </div>
             </div>
-            <div class="row mx-0 p-0 mb-1">
+            <div class="row mx-0 p-0 mb-1" id="superherochildrenBody">
               <div class="col-12 mx-0 p-0 d-flex flex-column mx-auto">
                 <a
                   href="https://res.cloudinary.com/daasu66it/image/upload/f_auto,q_auto/v1563912103/JamesBootHomepage/works/content/web/1hiearchy_mbuefl.png"><img
@@ -369,7 +369,7 @@
             </button>
           </div>
 
-          <div class="modal-body" id="scoutsBody">
+          <div class="modal-body">
             <div class="row mx-0 p-0 mb-1 ">
               <div class="col-lg-8 col-12 d-flex flex-column mx-auto">
                 <a class="btn btn-dark mx-auto w-100 effra text-left"
@@ -379,6 +379,7 @@
                   mobile devices</p>
               </div>
             </div>
+            <div  id="scoutsBody">
             <div class="row mx-0 p-0 mb-1">
               <div class="col-12 mx-0 p-1">
                 <div class="col-12 mx-0 p-1">
@@ -435,7 +436,7 @@
                     class="img-fluid"></a>
               </div>
             </div>
-
+            </div>
           </div>
         </div>
 
