preperation for Online

--- a/index.html
+++ b/index.html
@@ -179,16 +179,16 @@
 
     <div class="container-fluid mt-5 d-lg-flex justify-content-center align-items-center" id="jWorks">
             <!-- My Works : Header -->
-            <div class="row justify-content-center">
+            <!-- <div class="row justify-content-center">
                 <div class="col-8 col-lg-10">
                     <h1 class="display-5 font-weight-bold text-uppercase text-light effra"><span
                             class="text-c-dark font-weight-bold effra">/</span> Recent Projects</h1>
                 </div>
-            </div>
+            </div> -->
             <!-- My Works : Cards -->
-            <div class="row d-flex mt-5 mb-5 justify-content-center" id="recentProjects">
+            <!-- <div class="row d-flex mt-5 mb-5 justify-content-center" id="recentProjects">
     
-            </div>
+            </div> -->
     
         </div>
 
